atualizacao swagger e melhorias
